--- a/src/app/products/add-product/add-product.component.html
+++ b/src/app/products/add-product/add-product.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex w-full max-w-lg mx-auto items-center justify-center flex-col bg-white rounded-lg shadow-lg border border-gray-300 p-8"
+  class="flex w-full max-w-lg mx-auto mt-16 items-center justify-center flex-col bg-white rounded-lg shadow-lg border border-gray-300 p-8"
 >
   <h2 class="text-3xl font-bold text-blue-600 mb-6">Create Product</h2>
   <form
@@ -63,17 +63,17 @@
         Valid price is required.
       </div>
     </div>
-    <div class="flex items-center justify-between">
+    <div class="flex flex-col md:flex-row gap-5 items-center justify-between">
       <button
         type="submit"
-        class="bg-blue-500 text-white py-2 px-6 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300"
+        class="bg-blue-500 text-white py-2 px-6 w-[420px] md:w-[210px] rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300"
         [disabled]="productForm.invalid"
       >
         Save
       </button>
       <button
         [routerLink]="['/products']"
-        class="bg-gray-500 text-white py-2 px-6 rounded-lg shadow-md hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-300"
+        class="bg-red-500 text-white py-2 px-6 w-[420px] md:w-[210px] rounded-lg shadow-md hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-gray-300"
       >
         Cancel
       </button>
