--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -16,7 +16,7 @@
         >
         <input
           id="name"
-          class="form-control w-[300px] md:w-[380px] px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200"
+          class="form-control w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200"
           formControlName="name"
         />
         <div
@@ -34,7 +34,7 @@
         >
         <textarea
           id="description"
-          class="form-control w-[300px] md:w-[380px] px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200"
+          class="form-control w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200"
           formControlName="description"
         ></textarea>
         <div
@@ -54,7 +54,7 @@
         <input
           id="price"
           type="number"
-          class="form-control w-[300px] md:w-[380px] px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200"
+          class="form-control w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200"
           formControlName="price"
         />
         <div
@@ -67,17 +67,17 @@
           Valid price is required.
         </div>
       </div>
-      <div class="flex items-center justify-between">
+      <div class="flex flex-col md:flex-row gap-5 items-center justify-between">
         <button
           type="submit"
-          class="bg-blue-500 text-white py-2 px-4 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300"
+          class="bg-blue-500 text-white py-2 px-6 w-[420px] md:w-[210px] rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300"
           [disabled]="productForm.invalid"
         >
           Save
         </button>
         <button
           [routerLink]="['/products']"
-          class="bg-gray-500 text-white py-2 px-4 rounded-lg shadow-md hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-300"
+          class="bg-red-500 text-white py-2 px-6 w-[420px] md:w-[210px] rounded-lg shadow-md hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-gray-300"
         >
           Cancel
         </button>
